<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:padding="20dp"
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/agregar_tareas"
            android:textAlignment="center"
            android:textSize="24sp"
            android:textStyle="bold" />

        <ImageView
            android:layout_marginTop="10dp"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:tint="@color/colorPrimary"
            android:layout_gravity="center"
            android:src="@drawable/ic_tarea"/>



        <android.support.design.widget.TextInputLayout
            android:layout_marginTop="10dp"
            android:id="@+id/txt_inputlayout_nomtarea"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/txt_inputEdit_nomtarea"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/nombre_tarea" />

        </android.support.design.widget.TextInputLayout>

        <Spinner
            android:id="@+id/spinner_selecionar_asignatura"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp">


        </Spinner>

        <Spinner
            android:id="@+id/spinner_selecionar_estudiante"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp">

        </Spinner>

        <android.support.design.widget.TextInputLayout
            android:layout_marginTop="10dp"
            android:id="@+id/txt_inputlayout_nota_tarea"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/txt_inputEdit_nota_tarea"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/nota"
                android:inputType="numberSigned" />

        </android.support.design.widget.TextInputLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btn_ingresar_tarea"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:textAllCaps="false"
                android:text="@string/ingresar"
                android:layout_weight="1"/>

            <Button
                android:id="@+id/btn_cancelar_tarea"
                android:textAllCaps="false"
                android:text="@string/cancelar"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"/>

        </LinearLayout>


    </LinearLayout>

</LinearLayout>